--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -92,6 +92,7 @@ body {
 }
 .item{
     margin: auto;
+    margin-bottom: 50px;
 }
 .item img{
     width: 100px;
@@ -100,6 +101,7 @@ body {
 
 .item .itemTitle{
     font-size: 1.4rem;
+    font-weight: 900;
 }
 /* Why work with us */
 #why{
@@ -109,6 +111,44 @@ body {
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-image: url('../images/Home/im_nearshore_communication.png');
+}
+#why .container{
+    padding: 10vh 2rem;
+}
+#why .text p{
+    text-align: center;
+}
+#why .row{
+    margin: 5vh 0;
+}
+#why .col-sm h1{
+    text-align: center;
+}
+.learnButton{
+    padding: 1rem;
+    background-color: orange;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+}
+.learnButton:hover{
+    padding: 1rem;
+    background-color: orange;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+}
+.learnButton:focus{
+    padding: 0.9rem;
+    background-color: orange;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    font-size: .9rem;
 }
 /* Footer */
 footer{
@@ -123,12 +163,20 @@ footer{
     .navbar-brand{
         width: 15vw;
     }
-
     #lulosoft .backgroundText{
         position: absolute;
         z-index: 0;
-        font-size: 6rem;
+        font-size: 5rem;
         top: 160vh;
     }
-
+    #why{
+        min-height: 250vh;
+        background-color: rgb(239, 239, 239);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-image: url('../images/Home/im_nearshore_communication.png');
+        background-size: contain;
+        height: 400vh;
+    }
 }
