--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -177,13 +177,13 @@ body {
     font-size: .9rem;
 }
 .nearShoreImages{
-    height: 100vh;
+    min-height: 100vh;
     background-color: rgb(239, 239, 239);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-image: url('../images/Home/im_nearshore_communication.png');
-    background-size: contain;
+    background-size: cover;
     color: white;
 
     padding: 30vh 10vw;
