--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -113,7 +113,16 @@ body {
     font-size: 10rem;
     top: 130vh;
     font-weight: 900;
-    color: rgba(0, 0, 0, 0.3);
+    color: rgba(0, 0, 0, 0.2);
+}
+.underline{
+    /* text-decoration:underline;
+    text-decoration-color: yellowgreen;
+    text-decoration-thickness: 3px; */
+    border-bottom: 2px solid yellowgreen;
+    display: inline-block;
+    line-height: 2;
+    text-shadow: 2px 2px white, 2px -2px white, -2px 2px white, -2px -2px white;
 }
 .item{
     margin: auto;
