--- a/assets/css/join.css
+++ b/assets/css/join.css
@@ -146,9 +146,14 @@ body {
     border: none;
     /* border-bottom: 3px solid rgba(0,0,0,.125); */
 }
-
+.card-header{
+    background-color: transparent;
+}
+.buttonMargin{
+    margin: 50px 0;
+}
 .learnButton{
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
     background-color: orange;
     text-transform: uppercase;
     font-weight: bold;
@@ -172,6 +177,12 @@ body {
     color: white;
     text-decoration: none;
     font-size: .9rem;
+}
+.black:hover{
+    color: black;
+}
+.black:focus{
+    color: black;
 }
 /* Footer */
 footer{
