--- a/assets/css/jobVacancy.css
+++ b/assets/css/jobVacancy.css
@@ -152,7 +152,126 @@ a:focus{
     display: inline-block; 
     width: 1em; 
     margin-left: -1em;
+}
+#apply{
+    min-height: 50vh;
+    padding: 9vh 3vw;
+    background-color: rgb(248, 248, 248);
+}
+
+.file-area {
+    width: 100%;
+    position: relative;
   }
+  .file-area input[type=file] {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    cursor: pointer;
+  }
+  .file-area .file-dummy {
+    width: 100%;
+    padding: 30px;
+    background: #FFFFFF;
+    text-align: center;
+    transition: background 0.3s ease-in-out;
+  }
+  .file-area .file-dummy .success {
+    display: none;
+  }
+  .file-area:hover .file-dummy {
+    background: rgba(255, 255, 255, 0.1);
+  }
+  .file-area input[type=file]:focus + .file-dummy {
+    outline: 2px solid rgba(255, 255, 255, 0.5);
+    outline: -webkit-focus-ring-color auto 5px;
+  }
+  .file-area input[type=file]:valid + .file-dummy {
+    border-color: rgba(0, 255, 0, 0.4);
+    background-color: rgba(0, 255, 0, 0.3);
+  }
+  .file-area input[type=file]:valid + .file-dummy .success {
+    display: inline-block;
+  }
+  .file-area input[type=file]:valid + .file-dummy .default {
+    display: none;
+  }
+  label {
+    font-weight: 500;
+    display: block;
+    margin: 4px 0;
+    text-transform: uppercase;
+    font-size: 13px;
+    overflow: hidden;
+  }
+  label span {
+    float: right;
+    text-transform: none;
+    font-weight: 200;
+    line-height: 1em;
+    font-style: italic;
+    opacity: 0.8;
+  }
+  
+  .form-controll {
+    display: block;
+    padding: 8px 16px;
+    width: 100%;
+    font-size: 16px;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    color: #fff;
+    font-weight: 200;
+  }
+  .form-controll:focus {
+    outline: 2px solid rgba(255, 255, 255, 0.5);
+    outline: -webkit-focus-ring-color auto 5px;
+  }
+  
+  button {
+    padding: 8px 30px;
+    background: yellowgreen;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 11px;
+    border: 0;
+    cursor: pointer;
+  }
+  
+.form-group {
+    max-width: 500px;
+    margin: auto;
+    margin-bottom: 30px;
+}
+.input_col{
+    margin-bottom: 5vh;
+}
+input{
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    color: gray;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    
+  }
+::placeholder {
+    color: gray;
+    font-weight: 300;
+    font-size: 1.2;
+}
+textarea:focus, input:focus{
+    outline: none;
+}
+.sectionTitle{
+
+}
 /* Footer */
 footer{
     text-align: center;
