needs small fixes

--- a/assets/css/contactUs.css
+++ b/assets/css/contactUs.css
@@ -300,7 +300,7 @@ textarea:focus, input:focus{
 #mapSection{
     padding: 20vh 15vw;
     min-height: 100vh;
-    background-image: url("../images");
+    background-image: url("../images/Home/");
     background-color: black;
     background-position: center;
     background-repeat: no-repeat;
